[package]
name = "server"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = [ "full" ] }
argh = "0.1"
rustls = { version = "0.19", features= [ "dangerous_configuration"]  }
tokio-rustls = { path = "../..", features= [ "dangerous_configuration"] }
